--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+/* ./src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Actor&family=Raleway:wght@100;500&display=swap');
+
+
+
+.font-actor{
+  font-family: 'Actor', sans-serif;
+}
+.font-raleway-100{
+  font-family: 'Raleway', sans-serif;
+  font-weight: 100;
+}
+.font-raleway-500{
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
 }
