--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 
 /* fonts */
-@import url('https://fonts.googleapis.com/css2?family=Actor&family=Raleway:wght@100;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Actor&family=Raleway:wght@100;500;700&display=swap');
 
 
 
@@ -14,6 +14,10 @@
 .font-raleway-100{
   font-family: 'Raleway', sans-serif;
   font-weight: 100;
+}
+.font-raleway-700{
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
 }
 .font-raleway-500{
   font-family: 'Raleway', sans-serif;
