--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,9 @@
 /* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Actor&family=Raleway:wght@100;500;700&display=swap');
 
-
+body{
+  background-color: #E5E7EB;
+}
 
 .font-actor{
   font-family: 'Actor', sans-serif;
